# Book

./: .gitignore  .gitmodules  CMakeLists.txt
backend/: CMakeLists.txt
backend/book/: Book.cpp  Book.h  BookChapter.cpp  BookChapter.h  BookItem.cpp  BookItem.h  BookItemRoot.cpp  BookItemRoot.h  BookPage.cpp  BookPage.h  BookPageManagers.cpp  BookPageManagers.h  CMakeLists.txt  IBook.h  IBookItem.h  IBoxPages.h  IManagerActions.h  IManagerBookChapter.h  IManagerBookItem.h  IManagerBookItemFactory.h  IPagination.h  IPaginationBook.h  ManagerActionsBook.cpp  ManagerActionsBook.h  ManagerActionsChapter.cpp  ManagerActionsChapter.h  PaginationBase.cpp  PaginationBase.h  PaginationBookBase.cpp  PaginationBookBase.h
backend/data/: BookData.cpp  BookData.h  BookDataChapter.cpp  BookDataChapter.h  BookDataItem.cpp  BookDataItem.h  BookDataPage.cpp  BookDataPage.h  BookDataType.h  BookmarkData.cpp  BookmarkData.h  BookmarksData.cpp  BookmarksData.h  CMakeLists.txt  IBookData.h  IBookDataChapter.h  IBookDataItem.h  IBookDataPage.h  IBookmarksData.h  IPaginationData.h  ManagerActionsData.cpp  ManagerActionsData.h  PaginationData.cpp  PaginationData.h  PaginationDataBook.cpp  PaginationDataBook.h
backend/loader/: BookChapterLoader.cpp  BookChapterLoader.h  BookChapterLoaderBase.cpp  BookChapterLoaderBase.h  BookItemLoader.cpp  BookItemLoader.h  BookLoader.cpp  BookLoader.h  BookPageLoader.cpp  BookPageLoader.h  CMakeLists.txt  IBookItemLoader.h
backend/reader/: BookChapterDataReader.cpp  BookChapterDataReader.h  BookChapterDataReaderBase.cpp  BookChapterDataReaderBase.h  BookDataReader.cpp  BookDataReader.h  BookItemDataReader.cpp  BookItemDataReader.h  BookPageDataReader.cpp  BookPageDataReader.h  BookmarksDataReader.cpp  BookmarksDataReader.h  CMakeLists.txt  IBookChapterDataReader.h  IBookDataReader.h  IBookItemDataReader.h  IBookPageDataReader.h  IBookmarksDataReader.h  IManagerActionsDataReader.h  IPaginationDataBookReader.h  IPaginationDataReader.h  ManagerActionsDataReader.cpp  ManagerActionsDataReader.h  PaginationDataBookReader.cpp  PaginationDataBookReader.h  PaginationDataReader.cpp  PaginationDataReader.h  PaginationDataReaderBase.cpp  PaginationDataReaderBase.h
frontend/: CMakeLists.txt
frontend/main/: CMakeLists.txt
frontend/test/: CMakeLists.txt  ForTest.cpp  main.cpp
frontend/test/loader/: BookChapterLoaderTest.cpp  BookLoaderTest.cpp  BookPageLoaderTest.cpp
frontend/test/reader/: BookChapterDataReaderTest.cpp  BookDataReaderTest.cpp  BookPageDataReaderTest.cpp  BookmarksDataReaderTest.cpp  ManagerActionsDataReaderTest.cpp  PaginationDataBookReaderTest.cpp  PaginationDataReaderTest.cpp
sub/: CMakeLists.txt
